--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".App"
+        android:name=".ui.content.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +14,17 @@
         android:theme="@style/Theme.GlucoseFit"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.content.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.GlucoseFit">
+        </activity>
+        <activity
+            android:name=".ui.onboarding.OnBoarding"
+            android:exported="false"
+            android:theme="@style/Theme.GlucoseFit">
+        </activity>
+        <activity
+            android:name=".ui.RedirectorActivity"
             android:exported="true"
             android:theme="@style/Theme.GlucoseFit">
             <intent-filter>
