--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
             android:name=".ui.RedirectorActivity"
             android:exported="true"
-            android:theme="@style/Theme.GlucoseFit">
+            android:theme="@style/Theme.GlucoseFit.Startup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
