--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.1"
 compose = "2.3.1"
+coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.4"
 grpcKotlinStub = "1.3.0"
 grpcOkhttp = "1.52.0"
@@ -8,7 +9,7 @@ grpcStub = "1.57.2"
 hiltAndroid = "2.54"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.1.10"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -16,15 +17,16 @@ kotlinxCoroutinesCore = "1.10.1"
 kotlinxSerializationJson = "1.7.3"
 lifecycle = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.03.01"
+composeBom = "2025.04.00"
 navigationCompose = "2.8.9"
 protobuf = "4.30.1"
-room = "2.6.1"
+room = "2.7.0"
 runtimeLivedata = "1.7.8"
 uiTextGoogleFonts = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastorePreferences" }
 androidx-datastore-rxjava2 = { module = "androidx.datastore:datastore-rxjava2", version.ref = "datastorePreferences" }
 androidx-datastore-rxjava3 = { module = "androidx.datastore:datastore-rxjava3", version.ref = "datastorePreferences" }
