--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         </activity>
         <activity
             android:name=".ui.RedirectorActivity"
+            android:exported="false"
+            android:theme="@style/Theme.GlucoseFit"/>
+        <activity
+            android:name=".ui.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.GlucoseFit.Startup">
             <intent-filter>
