--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.9.2"
 compose = "2.3.1"
 coreSplashscreen = "1.0.1"
-datastorePreferences = "1.1.4"
+datastorePreferences = "1.1.5"
 grpcKotlinStub = "1.3.0"
 grpcOkhttp = "1.52.0"
 grpcStub = "1.57.2"
@@ -13,16 +13,19 @@ coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlin-serialization = "2.1.10"
 kotlinxCoroutinesCore = "1.10.1"
 kotlinxSerializationJson = "1.7.3"
+ksp = "2.1.10-1.0.31"
 lifecycle = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.04.00"
+composeBom = "2025.04.01"
 navigationCompose = "2.8.9"
 protobuf = "4.30.1"
-room = "2.7.0"
-runtimeLivedata = "1.7.8"
-uiTextGoogleFonts = "1.7.8"
+protobuf-plugin = "0.9.4"
+room = "2.7.1"
+runtimeLivedata = "1.8.0"
+uiTextGoogleFonts = "1.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -72,4 +75,8 @@ protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", ve
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-serialization" }
+protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
+hilt = { id = "com.google.dagger.hilt.android" }
+room = { id = "androidx.room", version.ref = "room" }
